--- a/src/main/webapp/WEB-INF/swagger/index.html
+++ b/src/main/webapp/WEB-INF/swagger/index.html
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:8081/api-docs";
+        url = "/api-docs";
       }
 
       hljs.configure({
