--- a/src/main/webapp/resources/dev/plugin/job/type/COMPILE/config.html
+++ b/src/main/webapp/resources/dev/plugin/job/type/COMPILE/config.html
@@ -1,9 +1,11 @@
-<div class="form-group plugin-introduce">
+<div class="form-group plugin-introduce" ng-controller="BCloudPluginController">
     <div class="column text-left col-sm-3 col-md-2">
         <label>说明</label>
     </div>
     <div class="column text-left col-sm-9 col-md-10">
         bcloud job无详细配置
     </div>
-    <agile.codemirror></agile.codemirror>
+    {{::config.id}}
+    <button ng-click="update()">试试改值</button>
+    <!--<agile.codemirror></agile.codemirror>-->
 </div>
