--- a/src/main/webapp/resources/dev/plugin/job/type/RELEASE/config.html
+++ b/src/main/webapp/resources/dev/plugin/job/type/RELEASE/config.html
@@ -1,8 +1,9 @@
-<div class="form-group">
+<div class="form-group" ng-controller="ReleasePluginController">
     <div class="column text-left col-sm-3 col-md-2">
         <label>说明</label>
     </div>
     <div class="column text-left col-sm-9 col-md-10">
         release job无详细配置
     </div>
+    <button ng-click="al()">试试</button>
 </div>
