--- a/src/main/webapp/resources/dev/tpl/config/config.github.html
+++ b/src/main/webapp/resources/dev/tpl/config/config.github.html
@@ -39,10 +39,8 @@
                         </div>
                     </li>
                     <li>
-                        <div class="switch switch-mini">
-                            <input type="checkbox" ng-true-value="true" ng-false-value="false" ng-model="githubCtrl.isSyncGithub" checked/>
-                            同意持续交付平台从GitHub获得该仓库的基本信息
-                       </div>
+                        <input  type="checkbox" ng-true-value="true" ng-false-value="false" ng-model="githubCtrl.isSyncGithub" checked/>
+                        <span>同意持续交付平台从GitHub获得该仓库的基本信息</span>
                     </li>
                 </ul>
             </div>
