--- a/src/main/webapp/resources/dev/tpl/config/plugin.select.html
+++ b/src/main/webapp/resources/dev/tpl/config/plugin.select.html
@@ -1,6 +1,6 @@
 <div class="plugin-job-modal">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="close()"
+        <button type="button" class="close" ng-click="cancelWindow()"
                 aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">选择具体任务</h4>
     </div>
