--- a/src/main/webapp/resources/dev/tpl/pipeline/pipeline.html
+++ b/src/main/webapp/resources/dev/tpl/pipeline/pipeline.html
@@ -11,6 +11,9 @@
                 </span>
             </div>
             <div class="col-md-5 text-float-right">
+                <a  class="module-settings-link" ng-click="buildPipeline()">
+                    <span class="fa fa-hand-rock-o"></span> 执行构建
+                </a>
                 <a ui-sref="release({module: buildsCtrl.context.module})"  class="module-settings-link">
                     <span class="release-history-icon"></span> 发布记录
                 </a>
