分支构建页

--- a/src/main/webapp/resources/dev/tpl/pipeline/builds.branch.html
+++ b/src/main/webapp/resources/dev/tpl/pipeline/builds.branch.html
@@ -10,7 +10,7 @@
                     <div class="menu-search-input" ng-click="$event.stopPropagation()">
                         <input class="input-box form-control" type="text"
                                ng-model="branchFilter"
-                               placeholder="搜索">
+                               placeholder="搜索分支">
                     </div>
                 </li>
                 <li><div class="divider"></div></li>
