所有分支构建弹窗页 局部reload 修改所有分支构建页的加载方式

--- a/src/main/webapp/resources/dev/tpl/pipeline/builds.branches.html
+++ b/src/main/webapp/resources/dev/tpl/pipeline/builds.branches.html
@@ -36,6 +36,8 @@
                     <i class="fa" ng-class="fold ? 'fa-plus' : 'fa-minus'" ng-show="true"></i>
                     <span ng-bind="branch"></span>
                 </button>
+                &nbsp;
+                分支备注
             </div>
         </div>
         <pipeline-builds app-pipeline-builds="builds" app-fold="fold" context="branchesCtrl.context"></pipeline-builds>
