编译产出复用 前端

--- a/src/main/webapp/resources/dev/plugin/job/type/COMPILE/config.html
+++ b/src/main/webapp/resources/dev/plugin/job/type/COMPILE/config.html
@@ -1,7 +1,7 @@
 <div class="real-job-conf-container" ng-controller="CompileController">
     <div class="form-group">
         <div class="col-xs-6">
-            是否复用编译产出：<input type="checkbox" class="check-fault" ng-model="$parent.config.multi">
+            是否复用相同commitId的编译产出：<input type="checkbox" class="check-fault" ng-model="$parent.config.multi">
         </div>
     </div>
 </div>
